# ICHack25

./: .gitignore
arduino_nfc/: nfc.ino
arduino_nfc/nfc/: nfc.ino
firmware/: .gitignore  CMakeLists.txt  DONT_README.md  upload.sh
firmware/include/: config.h  credits.h  debug.h  input.h  letters.h  logo_patterns.h  pair.h  quotes.h  render.h  snake.h  tetris.h  tx.h
firmware/scripts/: build.py  generate_bin.py  mass_upload.py
firmware/src/: ICHack.cpp  credits.cpp  debug.cpp  input.cpp  letters.cpp  logo_patterns.cpp  pair.cpp  quotes.cpp  render.cpp  tx.cpp
frontend/: index.html  network.html  profile.html  setup-profile.html
frontend/network/: index.html
server/: Cargo.toml  idk
server/src/: api.rs  main.rs
server/static/: index.html  network.html  profile.html  setup-profile.html
server/static/html/: index.html
server/static/pfp/: 111
server/templates/: base.html  collector.html  datareader copy.html  home.html  network.html  register-old.html  register.html
tools/: downsizer.py
