[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
actix-cors = "0.6"
askama = "0.12.1"
askama_actix = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.10.0"
serde_json = "1.0.138"
